# BeckoningMU

./: .gitignore  .gitignore.htm  README.md  pyproject.toml  test.html
bbs/: CmdSet.py  apps.py  commands.py  models.py
bbs/migrations/: 0001_initial.py
commands/: admin.py  building.py  character.py  character_customization.py  character_management.py  chargen.py  command.py  comms.py  default_cmdsets.py  dice.py  notes.py  roleplaying.py  rouse.py  rp.py  utils.py  v5.py  vampstatus.py  wod.py
jobs/: jobCmdSet.py  models.py
jobs/commands/: commands.py
jobs/migrations/: 0001_initial.py  0002_job_created_by.py  0003_job_completed.py  0004_job_players.py  0005_comment_public.py
server/conf/: connection_screens.py  settings.py
typeclasses/: accounts.py  characters.py  exits.py  objects.py  rooms.py
wiki/: models.py
wiki/migrations/: 0001_initial.py
world/: data.py  help_entries.py
world/help/: building.yaml  building_guide.yaml  evennia.yaml
world/help/examples/: txt_example.txt  yaml_example.yml
