[tool.poetry]
package-mode = false
name = "beckoningmu"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
evennia = "^4.1.1"
gitpython = "^3.1.43"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff linter configuration
[tool.ruff]
line-length = 160


